--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "server": "node server/index.js",
     "server:dev": "nodemon server/index.js",
     "production": "npm run build && node server/production.js",
+    "build:railway": "rm -rf node_modules/.cache && npm install --production=false && npm run build",
     "start:prod": "concurrently \"npm run server\" \"npm run production\"",
     "test": "jest",
     "test:coverage": "npm run jest -- --coverage",
