🐳 Switch to Dockerfile Build for Railway
🔧 Docker Build Solution:
- Updated Dockerfile with cache-safe build process
- Railway.json now uses DOCKERFILE builder instead of NIXPACKS
- Added health check endpoint configuration
- Optimized .dockerignore for faster builds

📦 Key Changes:
- Dockerfile: npm ci --no-cache to avoid EBUSY errors
- railway.json: DOCKERFILE builder with health checks
- package.json: Added build:clean script
- .dockerignore: Exclude problematic cache files

✅ Resolves:
- Docker cache mount conflicts
- EBUSY resource locked errors
- Railway deployment build failures
- Container health monitoring

No more cache issues! 🚀

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "server:dev": "nodemon server/index.js",
     "production": "npm run build && node server/production.js",
     "build:railway": "rm -rf node_modules/.cache && npm install --production=false && npm run build",
+    "build:clean": "rm -rf dist node_modules/.cache && npm run build",
     "start:prod": "concurrently \"npm run server\" \"npm run production\"",
     "test": "jest",
     "test:coverage": "npm run jest -- --coverage",
