--- a/.dockerignore
+++ b/.dockerignore
@@ -1,17 +1,19 @@
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.npm
-.cache
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+node_modules/.cache
 dist/
 build/
 .git/
 .gitignore
 README*.md
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+coverage/
+.nyc_output/
+.vscode/
+.idea/
