fix: simplify production server for Railway deployment
- Removed health check temporarily to debug deployment
- Created simple-production.js (minimal Express server)
- Serves only static dist/ files without backend dependencies
- Changed start script to use simple server
- Increased restart retries to 10

This will help identify if issue is with backend services or general deployment

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "preview": "npm run build && max preview --port 8000",
     "record": "cross-env NODE_ENV=development UMI_ENV=test max record --scene=login",
     "serve": "umi-serve",
-    "start": "cross-env NODE_ENV=production node server/production.js",
+    "start": "node server/simple-production.js",
+    "start:full": "cross-env NODE_ENV=production node server/production.js",
     "start:dev": "cross-env UMI_ENV=dev MOCK=none max dev",
     "start:no-mock": "cross-env MOCK=none max dev",
     "start:pre": "cross-env UMI_ENV=pre MOCK=none max dev",
