--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "preview": "npm run build && max preview --port 8000",
     "record": "cross-env NODE_ENV=development UMI_ENV=test max record --scene=login",
     "serve": "umi-serve",
-    "start": "node server/simple-production.js",
+    "start": "cross-env NODE_ENV=production node server/production.js",
     "start:full": "cross-env NODE_ENV=production node server/production.js",
     "start:dev": "cross-env UMI_ENV=dev MOCK=none max dev",
     "start:no-mock": "cross-env MOCK=none max dev",
