--- a/biome.json
+++ b/biome.json
@@ -37,6 +37,9 @@
         "noStaticElementInteractions": "off",
         "useValidAnchor": "off",
         "useKeyWithClickEvents": "off"
+      },
+      "security": {
+        "noDangerouslySetInnerHtml": "warn"
       }
     }
   },
