--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-quill-new": "^3.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
