feat: Ek dosya (attachment) yükleme özelliği eklendi
- Backend: multer ile dosya upload endpoint (/api/uploads)
- Frontend: AttachmentUploader komponenti
- Templates sayfasına ek dosya ekleme özelliği
- Dosya silme ve indirme desteği
- Maks 10MB, 5 dosya limiti

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.3",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "react": "^19.1.0",
