--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "antd": "^5.26.4",
     "antd-style": "^3.7.0",
     "axios": "^1.13.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.3",
     "form-data": "^4.0.5",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
