--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
+    "cheerio": "^1.0.0",
     "classnames": "^2.5.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
